[package]
name = "hack_n_slash"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy="0.13"
bevy-inspector-egui = "0.24.0"
bevy_pancam = "0.11.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
