[package]
name = "hack_n_slash"
version = "0.1.0"
edition = "2021"

[dependencies]
benimator = "4.1.3"
bevy={ version ="0.13", features = ['dynamic_linking']}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
